# project-nimbus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  start.sh  startup.sh  update.sh
.github/workflows/: binary.yml  eslint.yml  greetings.yml
client/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
client/.github/: FUNDING.yml
client/cypress/e2e/: basic.spec.ts
client/locales/: de.yml  en.yml
client/public/: sse.js  style.css
client/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  socket.ts  style.css  wordcloud.ts
client/src/components/: CategorizerModule.vue  HeaderBar.vue  LoginModule.vue  PartnermatcherModule.vue  QrCode.vue  UserGrid.vue  WaitingModule.vue  WordCloudModule.vue
client/src/pages/: index.vue
manager/: package-lock.json  package.json
manager/src/: index.ts
manager/static_assets/: style.css
scripts/: install_termux.sh  update.sh
server/: Cargo.toml  deno.json  package.json  pnpm-lock.yaml
server/src/: auth.ts  broadcast.rs  categorizer.ts  dashboard.ts  idle.ts  index.html  index.ts  lib.rs  main.rs  module.rs  partnermatcher.ts  presentation.ts  shared.ts  ui.ts  wordcloud.ts
server/src/module/: wordcloud.rs
static/: index.html
