[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.4.1"
actix-web-lab = "0.20.2"
env_logger = "0.11.1"
futures-util = "0.3.30"
log = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1.35.1"
tokio-stream = "0.1.14"
uuid = { version = "1.7.0", features = ["v4"] }
